--- a/DachyWeb/Views/Category/Index.cshtml
+++ b/DachyWeb/Views/Category/Index.cshtml
@@ -1,1 +1,25 @@
-﻿<h1>Category List</h1>
+﻿@model List<Category>
+
+<h1>Lista Kategorii</h1>
+<table class="table table-bordered table-striped">
+    <thead>
+    <tr>
+        <th>
+            Kategoria
+        </th>
+        <th>
+            Kolejność wyświetlania
+        </th>
+    </tr>
+    <tbody>
+            @foreach (var obj in Model.OrderBy(u => u.DisplayOrder))
+            {
+             <tr>
+                    <td>@obj.Name</td>
+                <td>
+                    @obj.DisplayOrder
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
