--- a/DachyWeb/Areas/Admin/Views/Category/Edit.cshtml
+++ b/DachyWeb/Areas/Admin/Views/Category/Edit.cshtml
@@ -17,10 +17,12 @@
                     <input asp-for="Name" class="form-control border-0 shadow" />
                     <label asp-for="Name" class="ms-2"></label>
                     <span asp-validation-for="Name" class="text-danger"></span>
+                </div>
                 <div class="form-floating py-2 col-12">
                     <input asp-for="DisplayOrder" class="form-control border-0 shadow" />
                     <label asp-for="DisplayOrder" class="ms-2"></label>
-                        <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                    <span asp-validation-for="DisplayOrder" class="text-danger"></span>
+                </div>
                 <div class="form-floating py-2 col-12">
                 <div class="row pt-2">
                     <div class="col-6">
