--- a/DachyWeb/Views/Shared/_Layout.cshtml
+++ b/DachyWeb/Views/Shared/_Layout.cshtml
@@ -35,6 +35,9 @@
                                 <li class="nav-item">
                                     <a class="dropdown-item" asp-area="Admin" asp-controller="Category" asp-action="Index">Kategorie</a>
                                 </li>
+                                <li class="nav-item">
+                                    <a class="dropdown-item" asp-area="Admin" asp-controller="Product" asp-action="Index">Produkty</a>
+                                </li>
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
