--- a/DachyWeb/Areas/Admin/Views/Product/Index.cshtml
+++ b/DachyWeb/Areas/Admin/Views/Product/Index.cshtml
@@ -13,42 +13,26 @@
             <div class="col-6">
             </div>
             <div class="col-6 text-end">
-                <a asp-controller="Product" asp-action="Create" class="btn btn-primary">
+                <a asp-controller="Product" asp-action="Upsert" class="btn btn-primary">
                     <i class="bi bi-plus-square-fill"></i> Dodaj produkt do oferty
                 </a>
             </div>
         </div>
 
-        <table class="table table-bordered table-striped">
+        <table id="tblData" class="table table-bordered table-striped" style="width:100%">
             <thead>
                 <tr>
                     <th>Nazwa</th>
                     <th>Producent</th>
                     <th>Cena</th>
-                    <th>Opis</th>
+                    <th>Kategoria</th>
+                    <th></th>
                 </tr>
-            <tbody>
-                    @foreach (var obj in Model)
-                    {
-                    <tr>
-                        <td>@obj.Name</td>
-                        <td> @obj.Producent </td>
-                        <td> @obj.ListPrice </td>
-                        <td>  </td>
-                        <td>
-                            <div class="w-75 btn-group" role="group">
-                                <a asp-controller="Product" asp-action="Edit" asp-route-productId="@obj.ProductId" class="btn btn-primary mx-20">
-                                    <i class="bi bi-pencil-square"></i> Edytuj
-                                </a>
-                                <a asp-controller="Product" asp-action="Delete" asp-route-productId="@obj.ProductId" class="btn btn-danger mx-20">
-                                    <i class="bi bi-trash-fill"></i> Usuń
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                    }
-            </tbody>
         </table>
 
     </div>
 </div>
+
+@section Scripts{
+    <script src="~/js/product.js"></script>
+}
