--- a/DachyWeb/Areas/Customer/Views/_ViewImports.cshtml
+++ b/DachyWeb/Areas/Customer/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using DachyWeb
 @using Dachy.Models
 @using Dachy.Models.ViewModels
+@using Dachy.Utility
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
