--- a/DachyWeb/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/DachyWeb/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using DachyWeb.Areas.Identity
 @using DachyWeb.Areas.Identity.Pages
+@using Dachy.Utility
+@using Dachy.Models
+@using Dachy.Models.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
