--- a/DachyWeb/Views/Shared/_Layout.cshtml
+++ b/DachyWeb/Views/Shared/_Layout.cshtml
@@ -31,8 +31,10 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="Customer" asp-controller="Home" asp-action="Accessories">Akcesoria</a>
                         </li>
-                        <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        @if (User.IsInRole(SD.Role_Admin))
+                        {
+                            <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                                 Zarządzanie stroną
                             </a>
                             <ul class="dropdown-menu">
@@ -45,6 +47,7 @@
                                 <li><hr class="dropdown-divider"></li>
                             </ul>
                         </li>
+                        }
                     </ul>
                     <partial name="_LoginPartial"/>
                 </div>
