--- a/DachyWeb/Areas/Admin/Views/Order/Details.cshtml
+++ b/DachyWeb/Areas/Admin/Views/Order/Details.cshtml
@@ -128,7 +128,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.Carrier" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.Carrier" id="carrier" type="text" class="form-control" />
                                     }
                                     else
                                     {
@@ -141,7 +141,7 @@
                                 <div class="col-9">
                                     @if (User.IsInRole(SD.Role_Admin) || User.IsInRole(SD.Role_Employee))
                                     {
-                                        <input asp-for="OrderHeader.TrackingNumber" type="text" class="form-control" />
+                                        <input asp-for="OrderHeader.TrackingNumber" id="trackingNumber" type="text" class="form-control" />
                                     }
                                     else
                                     {
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
                             <div class="row my-1">
-                                <div class="col-3">Data dostawy</div>
+                                <div class="col-3">Data wysyłki</div>
                                 <div class="col-9">
                                     <input value="@Model.OrderHeader.ShippingDate.ToShortDateString()" readonly type="text" class="form-control" />
                                 </div>
@@ -171,6 +171,12 @@
                                         <input asp-for="OrderHeader.PaymentIntentId" readonly type="text" class="form-control" />
                                     </div>
                                 </div>
+                                <div class="row my-1">
+                                    <div class="col-3">Data płatności</div>
+                                    <div class="col-9">
+                                        <input asp-for="OrderHeader.PaymantDueDate" readonly type="text" class="form-control" />
+                                    </div>
+                                </div>
                             }
 
                             @* Sekcja płatności *@
@@ -187,6 +193,7 @@
                         </div>
 
                         <div class="col-12 col-lg-5 offset-lg-1">
+                            <h4 class="d-flex justify-content-between align-items-center mb-3">
                             <h4 class="d-flex justify-content-between align-items-center mb-3">
                                 <span class="text-primary">Podsumowanie zamówienia</span>
                             </h4>
@@ -228,17 +235,20 @@
                             {
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusApproved)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Przekaż do realizacji</button>
+                                    <button type="submit" asp-action="StartProcessing"
+                                            class="btn btn-primary form-control my-1">
+                                        Przekaż do realizacji
+                                    </button>
                                 }
                                 @if (Model.OrderHeader.OrderStatus == SD.StatusInProcess)
                                 {
-                                    <button type="submit" class="btn btn-primary form-control my-1">Zamów wysyłkę</button>
+                                    <button type="submit" asp-action="ShipOrder" onclick="return validateInput()" class="btn btn-primary form-control my-1">Zamów wysyłkę</button>
                                 }
                                 @if (Model.OrderHeader.OrderStatus != SD.StatusRefunded &&
-                                        Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
-                                        Model.OrderHeader.OrderStatus != SD.StatusShipped)
+                               Model.OrderHeader.OrderStatus != SD.StatusCancelled &&
+                               Model.OrderHeader.OrderStatus != SD.StatusShipped)
                                 {
-                                    <button type="submit" class="btn btn-danger form-control my-1">Anuluj zamówienie</button>
+                                    <button asp-action="CancelOrder" type="submit" class="btn btn-danger form-control my-1">Anuluj zamówienie</button>
                                 }
                             }
                         </div>
@@ -248,3 +258,30 @@
         </div>
     </div>
 </form>
+
+@section Scripts {
+
+    <partial name="_ValidationScriptsPartial" />
+    <script>
+        function validateInput(){
+            if(document.getElementById("trackingNumber").value==""){
+                Swal.fire({
+                    icon:'error',
+                    title:'Ups...',
+                    text:'Proszę wprowadzić numer przesyłki!'
+                });
+                return false;
+            }
+            if(document.getElementById("carrier").value==""){
+                Swal.fire({
+                    icon:'error',
+                    title:'Ups...',
+                    text:'Proszę wprowadzić przewoźnika!'
+                });
+                return false;
+            }
+            return true;
+        }
+    </script>
+
+}
