--- a/DachyWeb/Areas/Identity/Pages/Account/Register.cshtml
+++ b/DachyWeb/Areas/Identity/Pages/Account/Register.cshtml
@@ -5,7 +5,12 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-4">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="py-2 text-white">Rejestracja</h2>
+                @if (User.IsInRole(SD.Role_Admin)){
+                    <h2 class="py-2 text-white">Zarejestruj - ADMIN</h2>
+                }
+                else{
+                    <h2 class="py-2 text-white">Rejestracja</h2>
+                }
             </div>
         </div>
     </div>
@@ -61,25 +66,28 @@
                         <label asp-for="Input.PostalCode" class="ms-2 text-muted">Kod pocztowy</label>
                         <span asp-validation-for="Input.PostalCode" class="text-danger"></span>
                     </div>
-                    <div class="form-floating mb-3 col-md-6">
-                        <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
-                            <option disabled selected>Wybierz rolę użytkownika</option>
-                        </select>
-                    </div>
-                    <div class="form-floating mb-3 col-md-6">
-                        <select asp-for="Input.CompanyId" style="display:none;" asp-items="@Model.Input.CompanyList" class="form-select">
-                            <option disabled selected>Wybierz firmę</option>
-                        </select>
-                    </div>
+                    @if (User.IsInRole(SD.Role_Admin)){
+                        <div class="form-floating mb-3 col-md-6">
+                            <select asp-for="Input.Role" asp-items="@Model.Input.RoleList" class="form-select">
+                                <option disabled selected>Wybierz rolę użytkownika</option>
+                            </select>
+                        </div>
+                        <div class="form-floating mb-3 col-md-6">
+                            <select asp-for="Input.CompanyId" style="display:none;" asp-items="@Model.Input.CompanyList" class="form-select">
+                                <option disabled selected>Wybierz firmę</option>
+                            </select>
+                        </div>
+                    }
                     <div class="col-12">
                         <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Zarejestruj</button>
                     </div>
                 </form>
             </div>
-            <div class="col-md-12">
+            @if (!User.IsInRole(SD.Role_Admin)){
+            <div class="col-md-12 p-3 text-center">
                 <section>
                     <p class="divider-text d-flex pt-3">lub</p>
-                    <h3>Use another service to register.</h3>
+
                     @{
                         if ((Model.ExternalLogins?.Count ?? 0) == 0)
                         {
@@ -108,6 +116,7 @@
                     }
                 </section>
             </div>
+            }
         </div>
     </div>
 </div>
