wersja końcowa dla pracy inż.

--- a/DachyWeb/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
+++ b/DachyWeb/Areas/Customer/Views/Cart/OrderConfirmation.cshtml
@@ -4,10 +4,10 @@
     <div class="col-12 text-center">
         <h1 class="text-primary text-center">Zamówienie zostało zarejestrowane!</h1>
         Numer twojego zamówienia to: @Model <br/><br/>
-        <img src="~/images/dach-czterospadowy.jpg" width="65%" />
+        <img src="~/images/pokryciadachoweindex2.webp" width="65%" />
     </div>
     <div class="col-12 text-center" style="color:maroon">
         <br/>
-        Sztossss! <br/>
+        Do zobaczenia! <br/>
     </div>
 </div>
