--- a/DachyWeb/Areas/Customer/Views/Cart/Index.cshtml
+++ b/DachyWeb/Areas/Customer/Views/Cart/Index.cshtml
@@ -18,7 +18,8 @@
             </div>
             <div class="row mb-3 pb-3">
                 <div class="col-md-2 offset-md-1">
-                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Kontynuuj zakupy</small></a>
+                    <a asp-area="Customer" asp-controller="Home" asp-action="Index" 
+                        class="btn btn-outline-primary text-uppercase mb-5 btn-sm"><small>Kontynuuj zakupy</small></a>
                 </div>
                 <div class="col-md-10 offset-md-1">
 
@@ -66,9 +67,6 @@
 
                     </div>
                     }
-
-
-
                 </div>
             </div>
             <div class="card-footer bg-white border-0">
