--- a/DachyWeb/Areas/Identity/Pages/Account/Login.cshtml
+++ b/DachyWeb/Areas/Identity/Pages/Account/Login.cshtml
@@ -38,13 +38,13 @@
                         </div>
                         <div class="d-flex justify-content-between pt-2">
                             <p>
-                                <a id="forgot-password" asp-page="./ForgotPassword">Forgot your password?</a>
+                                <a id="forgot-password" asp-page="./ForgotPassword">Zapomniane hasło?</a>
                             </p>
                             <p>
-                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                                <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Zarejestruj konto</a>
                             </p>
                             <p>
-                                <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
+                                <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Potwierdzenie e-maila</a>
                             </p>
                         </div>
                     </form>
